--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -142,6 +142,56 @@ footer > div:nth-of-type(2n) {
 .avatar-sm {
   display: none;
 }
+
+main {
+  min-height: 400px;
+  margin-top: 73px;
+}
+.toggle-nav button {
+  padding: 6px 14px;
+  border-radius: 4px;
+  border: 1px solid var(--color-theme-primary);
+  color: #fff;
+  background-color: var(--color-theme-primary);
+  display: none;
+}
+.toggle-nav button i {
+  font-size: 24px;
+}
+
+.toggle-navbar {
+  min-width: 240px;
+  position: fixed;
+  width: auto;
+  max-width: 60%;
+  background-color: rgba(255, 255, 255, 0.95);
+  /* background-color: red; */
+  color: white;
+  padding: 1rem;
+  right: 0;
+  height: 100%;
+  top: 74px;
+  box-shadow: var(--shadow-dark);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  display: none;
+}
+
+@media screen and (max-width: 1350px) {
+  nav .nav-left .logo-container {
+    height: 35px;
+  }
+
+  nav .nav-left,
+  nav .nav-right {
+    gap: 1.1rem;
+  }
+  .search-input {
+    min-width: 120px !important;
+  }
+}
+
 @media screen and (max-width: 1100px) {
   .avatar-sm {
     display: block;
@@ -191,44 +241,7 @@ footer > div:nth-of-type(2n) {
   footer > div:nth-of-type(2n) {
     justify-content: flex-start;
   }
-}
 
-main {
-  min-height: 400px;
-  margin-top: 73px;
-}
-.toggle-nav button {
-  padding: 6px 14px;
-  border-radius: 4px;
-  border: 1px solid var(--color-theme-primary);
-  color: #fff;
-  background-color: var(--color-theme-primary);
-  display: none;
-}
-.toggle-nav button i {
-  font-size: 24px;
-}
-
-.toggle-navbar {
-  min-width: 240px;
-  position: fixed;
-  width: auto;
-  max-width: 60%;
-  background-color: rgba(255, 255, 255, 0.95);
-  /* background-color: red; */
-  color: white;
-  padding: 1rem;
-  right: 0;
-  height: 100%;
-  top: 74px;
-  box-shadow: var(--shadow-dark);
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  display: none;
-}
-
-@media screen and (max-width: 1100px) {
   .nav-wrapper,
   .footer-wrapper {
     padding: 0.4rem 1rem;
